@@ -3,7 +3,8 @@
     <router-outlet></router-outlet>
 </div>
 
-<button (click)="scrollTo()" class="btn btn-controller position-fixed" style="background-color: #fff; bottom: 2rem; right: 2rem;">
+<button (click)="scrollTo()" class="btn btn-controller position-fixed"
+    style="border-radius: 5px 5px 0px 0px; z-index: 99; background-color: #282c35; color: #fff; bottom: 0rem; right: 2rem;">
     <span class="fas fa-chevron-up"></span>
 </button>
 <ws-toast></ws-toast>
