@@ -1,16 +1,17 @@
-<div class="home col-8 text-center center">
+<div class="home col-lg-8 text-center center">
     <img class="home__icon" src="assets/images/png/icon.png" alt="logo" />
     <p class="home__label">Find, view and collect your favorite shops</p>
     
     <div class="searchbar input-group">
-        <input class="searchbar__input form-control" placeholder="Search..." />
+        <input name="keyword" class="searchbar__input form-control" placeholder="Search..." [(ngModel)]="keyword"
+        (keydown.enter)="navigationSearch()"/>
         <div class="input-group-append">
-            <button class="searchbar__button input-group-text">
+            <button class="searchbar__button input-group-text" [routerLink]="['/search']" [queryParams]="{keyword: keyword}">
                 <span class="searchbar__icon fas fa-search"></span>
             </button>
         </div>
     </div>
-    <div class="mt-5">
+    <div class="mt-5" *ngIf="false">
         <div class="row no-gutters">
             <div class="offset-sm-3 col-sm-3">
                 <a href="javascript:void(0)"><img class="px-2 w-100" src="assets/images/png/apple-store.png" alt="apple store" /></a>
