@@ -26,3 +26,16 @@
         border: 0;
     }
 }
+
+@media(max-width:992px) {
+    .home{
+        .home__icon{
+            max-width: 200px;
+            width: 100%;
+            margin-bottom: 2rem;
+        }
+        .home__label{
+            font-size: 1.1rem;
+        }
+    }
+}
