@@ -1,4 +1,5 @@
 import { Component, OnInit } from '@angular/core';
+import { Router } from '@angular/router';
 
 @Component({
   selector: 'home',
@@ -7,9 +8,14 @@ import { Component, OnInit } from '@angular/core';
 })
 export class HomeComponent implements OnInit {
 
-  constructor() { }
+  keyword: string = '';
+  constructor(private router: Router) { }
 
   ngOnInit(): void {
+  }
+
+  navigationSearch() {
+    this.router.navigate(['search'], {queryParams: {keyword: this.keyword}});
   }
 
 }
