@@ -13,7 +13,7 @@
             </span>
         </div>
     </div>
-    <div class="col-md px-md-4 mb-2">
+    <div class="col-md px-md-4 mb-2 px-3">
         <div class="item-info__details">
             <div class="row no-gutters">
                 <p class="item-info__details__name d-inline-block text-break">{{ item?.name }}
