@@ -131,7 +131,7 @@
     padding-top: 1.5rem;
   
     .item-info__profile {
-        width: 300px;
+        width: 100%;
         height: 300px;
     }
   }
