@@ -52,7 +52,7 @@
 .new-items-container {
     background-color: #fff;
     width: 100%;
-    max-height: 360px;
+    min-height: 300px;
 
     ::ng-deep .swiper-pagination-bullet-active {
         border: 0;
@@ -109,6 +109,7 @@
     .merchant {
         .merchant__profile-container {
             .merchant__profile{ 
+                left: 25px;
                 border-radius: 50%;
                 padding: .5rem;
                 box-shadow: 0 0 3px #ccc;
