@@ -1,0 +1,8 @@
+import { AutofocusDirective } from './autofocus.directive';
+
+describe('AutofocusDirective', () => {
+  it('should create an instance', () => {
+    const directive = new AutofocusDirective();
+    expect(directive).toBeTruthy();
+  });
+});
