@@ -5,6 +5,7 @@
     top: calc(10% + 70px);
     border-radius: 5px 0 0 5px;
     background-color: #fff;
+    box-shadow: 0 0 3px #ddd;
 
     .float-icon {
         font-size: 1.2rem;
