@@ -3,4 +3,4 @@
     <span *ngIf="removable" (click)="removeFollow()" class="page__remove-icon fas fa-times"></span>
     <span *ngIf="savable" [class.selected]="follow" class="page__favorite-icon fas fa-heart"></span>
 </div>
-<p [routerLink]="['/shops', item._id]" class="page__name mb-1 text-center">{{ item?.name }} askjdhfkj jashdfkjha kjsahdfkj askdjflkj</p>
+<p [routerLink]="['/shops', item._id]" class="page__name mb-1 text-center">{{ item?.name }} </p>
