@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-05-18                                -
+---------------------------------------------
+.: WSW: Story: Searching Page Module (WSW-12)
+
+---------------------------------------------
 - 2020-05-17                                -
 ---------------------------------------------
 .: WSW: Task: Profile Image Upload (WSW-4)
